--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   position: relative;
   max-width: 1184px;
-  width: 100%;
+  width: 100vw;
 }
 
 .cover::before {
