--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,5 +1,5 @@
 .gallery {
-  width: 100%;
+  width: 100vw;
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(284px, 1fr) );
   gap: 16px;
