--- a/blocks/intro/__title/inro__title.css
+++ b/blocks/intro/__title/inro__title.css
@@ -10,7 +10,7 @@
 
 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 425px) {
   .inro__title {
     font-size: 32px;
     line-height: 35px;
