--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 984px;
+  width: 100vw;
 }
 
 @media screen and (max-width: 1024px) {
