--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 984px;
+  width: 100vw;
   row-gap: 80px;
   box-sizing: border-box;
 }
